--- a/WebUIBlazor/Pages/ControlPanel.razor
+++ b/WebUIBlazor/Pages/ControlPanel.razor
@@ -1,10 +1,7 @@
 ﻿@page "/controlpanel"
-@inject Data.ControlPanelService control
-@inject Data.BackgroundTimer background
-@inject Data.PrinterDataService printer
-@inject Data.PortConnectionManagerService portManager
-@inject Data.PrintingService print
-@inject Data.PrinterManagerService printerManager;
+@inject ControlPanelService ControlPanelService
+@inject PrinterDataService PrinterDataService
+@inject PrinterManagerService PrinterManagerService
 @inject NavigationManager MyNavigationManager
 
 @using Plotly.Blazor.Interop
@@ -22,7 +19,7 @@
     <MudItem xs="12" md="6" lg="4">
         <MudPaper Elevation="0">
             <PlotlyChart style="height: 60vh; width:100%; min-height: 350px"
-                         @bind-Config="config" @bind-Layout="layout" @bind-Data="data" @ref="chart"
+                         @bind-Config="Config" @bind-Layout="Layout" @bind-Data="Data" @ref="Chart"
                          ClickAction="ClickAction" AfterRender="SubscribeEvents" />
         </MudPaper>
     </MudItem>
@@ -32,62 +29,62 @@
         <div Class="py-5">
             <MudContainer MaxWidth="MaxWidth.Small" Class="px-2">
                 <MudStack Row="true" AlignItems="AlignItems.Center" Class="mb-2">
-                    <MudButton Variant="Variant.Text" Color="Color.Primary" @onclick="() => control.AdjustAxis(MovePositions.XMovePos,true)">X+</MudButton>
-                    <MudButton Variant="Variant.Text" Color="Color.Primary" @onclick="() => control.AdjustAxis(MovePositions.YMovePos,true)">Y+</MudButton>
-                    <MudButton Variant="Variant.Text" Color="Color.Primary" @onclick="() => control.AdjustAxis(MovePositions.ZMovePos,true)">Z+</MudButton>
-                    <MudButton Variant="Variant.Text" Color="Color.Primary" @onclick="() => control.BabySteps(0.02)">Z +0.02</MudButton>
-                    <MudNumericField Margin="MudBlazor.Margin.Dense" Immediate="true" @bind-Value="control.feedRate.FeedRateFreeMove" TextUpdateSuppression="false" Label="Set Feedrate" Variant="Variant.Outlined" Min="0" HideSpinButtons="true" />
+                    <MudButton Variant="Variant.Text" Color="Color.Primary" @onclick="() => ControlPanelService.AdjustAxis(MovePositions.XMovePos,true)">X+</MudButton>
+                    <MudButton Variant="Variant.Text" Color="Color.Primary" @onclick="() => ControlPanelService.AdjustAxis(MovePositions.YMovePos,true)">Y+</MudButton>
+                    <MudButton Variant="Variant.Text" Color="Color.Primary" @onclick="() => ControlPanelService.AdjustAxis(MovePositions.ZMovePos,true)">Z+</MudButton>
+                    <MudButton Variant="Variant.Text" Color="Color.Primary" @onclick="() => ControlPanelService.BabySteps(0.02)">Z +0.02</MudButton>
+                    <MudNumericField Margin="MudBlazor.Margin.Dense" Immediate="true" @bind-Value="ControlPanelService.FeedRate.FeedRateFreeMove" TextUpdateSuppression="false" Label="Set Feedrate" Variant="Variant.Outlined" Min="0" HideSpinButtons="true" />
                 </MudStack>
 
                 <MudStack Row="true" AlignItems="AlignItems.Center" Class="mb-2">
-                    <MudButton Variant="Variant.Text" Color="Color.Primary" @onclick="() => control.AdjustAxis(MovePositions.XMovePos,false)">X-</MudButton>
-                    <MudButton Variant="Variant.Text" Color="Color.Primary" @onclick="() => control.AdjustAxis(MovePositions.YMovePos,false)">Y-</MudButton>
-                    <MudButton Variant="Variant.Text" Color="Color.Primary" @onclick="() => control.AdjustAxis(MovePositions.ZMovePos,false)">Z-</MudButton>
-                    <MudButton Variant="Variant.Text" Color="Color.Primary" @onclick="() => control.BabySteps(-0.02)">Z -0.02</MudButton>
-                    <MudText Typo="Typo.overline"><b>CURRENT FEEDRATE: </b> @(control.feedRate.FeedRateFreeMove)(mm/min)</MudText>
+                    <MudButton Variant="Variant.Text" Color="Color.Primary" @onclick="() => ControlPanelService.AdjustAxis(MovePositions.XMovePos,false)">X-</MudButton>
+                    <MudButton Variant="Variant.Text" Color="Color.Primary" @onclick="() => ControlPanelService.AdjustAxis(MovePositions.YMovePos,false)">Y-</MudButton>
+                    <MudButton Variant="Variant.Text" Color="Color.Primary" @onclick="() => ControlPanelService.AdjustAxis(MovePositions.ZMovePos,false)">Z-</MudButton>
+                    <MudButton Variant="Variant.Text" Color="Color.Primary" @onclick="() => ControlPanelService.BabySteps(-0.02)">Z -0.02</MudButton>
+                    <MudText Typo="Typo.overline"><b>CURRENT FEEDRATE: </b> @(ControlPanelService.FeedRate.FeedRateFreeMove)(mm/min)</MudText>
                 </MudStack>
 
 
                 <MudStack Class="mb-2 flex-none" Row="true" AlignItems="AlignItems.Center" Justify="Justify.SpaceBetween">
                     <MudText Align="Align.Center" Typo="Typo.subtitle2">Set A Moving Value:</MudText>
-                    <MudChipSet @bind-SelectedChip="selected" Filter="true" Mandatory="true">
+                    <MudChipSet @bind-SelectedChip="Selected" Filter="true" Mandatory="true">
                         <MudChip Text="0.1" Color="Color.Success" Value="@((double)0.1)">0.1 mm</MudChip>
                         <MudChip Text="1" Color="Color.Success" Value="@((double)1)">1 mm</MudChip>
                         <MudChip Text="10" Color="Color.Success" Value="@((double)10)">10 mm</MudChip>
                         <MudChip Text="100" Color="Color.Success" Value="@((double)100)">100 mm</MudChip>
                     </MudChipSet>
-                    @if (selected != null)
+                    @if (Selected != null)
                     {
-                        control.valueToMove = double.Parse(@selected.Text);
+                        ControlPanelService.ValueToMove = double.Parse(Selected.Text);
                     }
                 </MudStack>
                 <div Style="display: flex; justify-content: center;" Elevation="0">
                     <MudContainer>
                         <MudGrid Spacing="5" Justify="Justify.SpaceBetween">
                             <MudItem xs="4" Class="px-0">
-                                <MudButton Style="white-space: nowrap;" FullWidth="true" Variant="Variant.Text" Color="Color.Primary" @onclick="() => control.AdjustAxis(MovePositions.EMovePos,true)">Extrude</MudButton>
-                                <MudButton Style="white-space: nowrap;" FullWidth="true" Variant="Variant.Text" Color="Color.Primary" @onclick="() => control.HomeAxisCommand()">HomeAll</MudButton>
+                                <MudButton Style="white-space: nowrap;" FullWidth="true" Variant="Variant.Text" Color="Color.Primary" @onclick="() => ControlPanelService.AdjustAxis(MovePositions.EMovePos,true)">Extrude</MudButton>
+                                <MudButton Style="white-space: nowrap;" FullWidth="true" Variant="Variant.Text" Color="Color.Primary" @onclick="() => ControlPanelService.HomeAxisCommand()">HomeAll</MudButton>
                             </MudItem>
                             <MudItem xs="4" Class="px-0">
-                                <MudButton Style="white-space: nowrap;" FullWidth="true" Variant="Variant.Text" Color="Color.Primary" @onclick="() => control.AdjustAxis(MovePositions.EMovePos,false)">Retract</MudButton>
-                                <MudButton Style="white-space: nowrap;" FullWidth="true" Variant="Variant.Text" Color="Color.Primary" @onclick="() => control.HomeAxisCommand(true,true)">HomeXY</MudButton>
+                                <MudButton Style="white-space: nowrap;" FullWidth="true" Variant="Variant.Text" Color="Color.Primary" @onclick="() => ControlPanelService.AdjustAxis(MovePositions.EMovePos,false)">Retract</MudButton>
+                                <MudButton Style="white-space: nowrap;" FullWidth="true" Variant="Variant.Text" Color="Color.Primary" @onclick="() => ControlPanelService.HomeAxisCommand(true,true)">HomeXY</MudButton>
                             </MudItem>
                             <MudItem xs="4" Class="px-0">
-                                <MudButton Style="white-space: nowrap;" FullWidth="true" Variant="Variant.Text" Color="Color.Primary" @onclick="control.DisableSteppers">Disable Motors</MudButton>
-                                <MudButton Style="white-space: nowrap;" FullWidth="true" Variant="Variant.Text" Color="Color.Primary" @onclick="() => control.HomeAxisCommand(false,false,true)">HomeZ</MudButton>
+                                <MudButton Style="white-space: nowrap;" FullWidth="true" Variant="Variant.Text" Color="Color.Primary" @onclick="ControlPanelService.DisableSteppers">Disable Motors</MudButton>
+                                <MudButton Style="white-space: nowrap;" FullWidth="true" Variant="Variant.Text" Color="Color.Primary" @onclick="() => ControlPanelService.HomeAxisCommand(false,false,true)">HomeZ</MudButton>
                             </MudItem>
                         </MudGrid>
 
                         <MudGrid Spacing="5" Justify="Justify.SpaceBetween">
                             <MudItem xs="12" Class="px-0">
-                                <MudButton Style="white-space: nowrap;" FullWidth="true" Variant="Variant.Text" Color="Color.Primary" @onclick="control.ZSteppersAutoAlignment">Align Z</MudButton>
+                                <MudButton Style="white-space: nowrap;" FullWidth="true" Variant="Variant.Text" Color="Color.Primary" @onclick="ControlPanelService.ZSteppersAutoAlignment">Align Z</MudButton>
                             </MudItem>
                         </MudGrid>
 
-                        <MudSwitch Label="Turn Fan On/Off" @bind-Value="@control.SwitchValue" @onclick="() => {control.ToggleValue();control.SetFanSpeed(control.fanSpeed);}" Color="Color.Success" Class="mr-n2 mb-6" />
-                        <MudSlider Size="Size.Large" @bind-Value="@control.defaultFanSpeed" Min="0" Max="255" @onchange="() => control.SetFanSpeed(control.defaultFanSpeed)">Fan Speed: @control.fanSpeedInPercentage% </MudSlider>
-                        <MudSlider Size="Size.Large" @bind-Value="@control.feedRatePercentage" Min="0" Max="500" @onchange="() => control.SetFeedRatePercentage(control.feedRatePercentage)">Print Speed: @control.feedRatePercentage% </MudSlider>
-                        <MudSlider Size="Size.Large" @bind-Value="@control.printFlowPercentage" Min="0" Max="500" @onchange="() => control.SetPrintFlowPercentage(control.printFlowPercentage)">Print Flow: @control.printFlowPercentage% </MudSlider>
+                        <MudSwitch Label="Turn Fan On/Off" @bind-Value="@ControlPanelService.SwitchValue" @onclick="() => {ControlPanelService.ToggleValue();ControlPanelService.SetFanSpeed(ControlPanelService.FanSpeed);}" Color="Color.Success" Class="mr-n2 mb-6" />
+                        <MudSlider Size="Size.Large" @bind-Value="@ControlPanelService.DefaultFanSpeed" Min="0" Max="255" @onchange="() => ControlPanelService.SetFanSpeed(ControlPanelService.DefaultFanSpeed)">Fan Speed: @ControlPanelService.FanSpeedInPercentage% </MudSlider>
+                        <MudSlider Size="Size.Large" @bind-Value="@ControlPanelService.FeedRatePercentage" Min="0" Max="500" @onchange="() => ControlPanelService.SetFeedRatePercentage(ControlPanelService.FeedRatePercentage)">Print Speed: @ControlPanelService.FeedRatePercentage% </MudSlider>
+                        <MudSlider Size="Size.Large" @bind-Value="@ControlPanelService.PrintFlowPercentage" Min="0" Max="500" @onchange="() => ControlPanelService.SetPrintFlowPercentage(ControlPanelService.PrintFlowPercentage)">Print Flow: @ControlPanelService.PrintFlowPercentage% </MudSlider>
                         <div>
                             <MudChart ChartType="ChartType.StackedBar" ChartSeries="@Series" @bind-SelectedIndex="Index" XAxisLabels="@XAxisLabels" Width="100%" Height="350px"></MudChart>
                         </div>
@@ -101,11 +98,11 @@
     @* Console Output -------------------------------------------------------------- *@
     <MudItem xs="12" md="12" lg="4">
         <MudPaper Class="d-flex mud-height-full" MaxHeight="600px">
-            <textarea id="consoleOutput" style="width:100%; padding:5px; resize: none;" readonly rows="10" cols="50">@control.consoleOutput</textarea>
+            <textarea id="consoleOutput" style="width:100%; padding:5px; resize: none;" readonly rows="10" cols="50">@ControlPanelService.ConsoleOutput</textarea>
         </MudPaper>
-        <form @onsubmit="() => control.SendGcodeViaTerminal(control.sendCommand)">
+        <form @onsubmit="() => ControlPanelService.SendGcodeViaTerminal(ControlPanelService.SendCommand)">
             <MudFocusTrap>
-                <MudTextField T="string" Label="Send G-Code Commands" Variant="Variant.Outlined" Clearable="true" @bind-Value="control.sendCommand" />
+                <MudTextField T="string" Label="Send G-Code Commands" Variant="Variant.Outlined" Clearable="true" @bind-Value="ControlPanelService.SendCommand" />
             </MudFocusTrap>
             <MudButton ButtonType="ButtonType.Submit" Variant="Variant.Filled" Color="Color.Primary" EndIcon="@Icons.Material.Filled.Send" FullWidth="true">Send</MudButton>
         </form>
@@ -117,45 +114,40 @@
     private int Index = -1;
     public List<ChartSeries> Series { get; set; }
 
-    public string[] XAxisLabels = { "Fan Speed", "Print Flow", "Print Speed" };
+    public string[] XAxisLabels { get; set; } = { "Fan Speed", "Print Flow", "Print Speed" };
     [CascadingParameter]
     private MudTheme Theme { get; set; }
-    MudChip selected;
-    private PlotlyChart chart;
-    private Config config;
-    private Layout layout;
-    private IList<ITrace> data;
+    MudChip Selected { get; set; }
+    private PlotlyChart Chart { get; set; }
+    private Config Config { get; set; }
+    private Layout Layout { get; set; }
+    private IList<ITrace> Data { get; set; }
     private IEnumerable<EventDataPoint> ClickInfos { get; set; }
-    int xSize;
-    int ySize;
+    int XSize { get; set; }
+    int YSize { get; set; }
 
     protected override void OnInitialized()
     {
-        printer.SelectedPrinter = printer.LoadPrinterData<MachineControlHub.Printer>(Data.PrinterDataService.SELECTED_PRINTER_SETTINGS_PATH);
+        PrinterManagerService.ActivePrinterChanged += OnSelectedPrinter;
 
-        if (printerManager.Printers != null && printerManager.Printers.Count > 0)
+        if (PrinterManagerService.Printers != null && PrinterManagerService.Printers.Count > 0)
         {
-            foreach (var port in printerManager.Printers.Values)
-            {
-                printerManager.InputReceived += OnUpdate;
-            }
-            portManager.SelectedPrinterChanged += OnSelectedPrinter;
-            // portManager.connections[portManager.SelectedPrinter].ConnectionServiceSerial.Write("M211");
+            PrinterManagerService.InputReceived += OnUpdate;
         }
 
-        xSize = printerManager.ActivePrinter.Bed?.XSize ?? 0;
-        ySize = printerManager.ActivePrinter.Bed?.YSize ?? 0;
+        XSize = PrinterManagerService.ActivePrinter.Bed?.XSize ?? 0;
+        YSize = PrinterManagerService.ActivePrinter.Bed?.YSize ?? 0;
 
         Series = new List<ChartSeries>
     {
-        new ChartSeries() { Name = "Fan Speed", Data = new double[] { control.fanSpeedInPercentage, control.feedRatePercentage , control.printFlowPercentage } },
+        new ChartSeries() { Name = "Fan Speed", Data = new double[] { ControlPanelService.FanSpeedInPercentage, ControlPanelService.FeedRatePercentage , ControlPanelService.PrintFlowPercentage } },
     };
-        config = new Config
+        Config = new Config
             {
                 Responsive = true
             };
 
-        layout = new Layout
+        Layout = new Layout
             {
                 Title = new Title
                 {
@@ -169,14 +161,14 @@
                     Color = "#FFF"
                 }
             };
-        data = new List<ITrace>
+        Data = new List<ITrace>
             {
             new Scatter
             {
                 Name = "ScatterTrace",
                 Mode = ModeFlag.None,
-                X = Enumerable.Range(0, xSize + 1).SelectMany(_ => Enumerable.Range(0, xSize + 1)).Cast<object>().ToList(),
-                Y = Enumerable.Range(0, ySize + 1).SelectMany(y => Enumerable.Repeat(y, ySize + 1)).Cast<object>().ToList()
+                X = Enumerable.Range(0, XSize + 1).SelectMany(_ => Enumerable.Range(0, XSize + 1)).Cast<object>().ToList(),
+                Y = Enumerable.Range(0, YSize + 1).SelectMany(y => Enumerable.Repeat(y, YSize + 1)).Cast<object>().ToList()
             }
             };
     }
@@ -201,12 +193,12 @@
     {
         Series = new List<ChartSeries>
     {
-        new ChartSeries() { Name = "Fan Speed", Data = new double[] { control.fanSpeedInPercentage, control.feedRatePercentage ,control.printFlowPercentage } },
+        new ChartSeries() { Name = "Fan Speed", Data = new double[] { ControlPanelService.FanSpeedInPercentage, ControlPanelService.FeedRatePercentage ,ControlPanelService.PrintFlowPercentage } },
     };
         await Task.Run(() =>
         {
-            control.UpdateParagraph(message);
-            printer.SetBedVolume(message);
+            ControlPanelService.UpdateParagraph(message);
+            PrinterDataService.SetBedVolume(message);
             InvokeAsync(StateHasChanged);
         });
     }
@@ -221,7 +213,7 @@
 
     public async void SubscribeEvents()
     {
-        await chart.SubscribeClickEvent();
+        await Chart.SubscribeClickEvent();
     }
 
     private void StoreClickedValues()
@@ -230,20 +222,19 @@
         {
             string x = ClickInfos.First().X.ToString();
             string y = ClickInfos.FirstOrDefault(d => d.TraceIndex == 0)?.Y.ToString();
-            control.positionToMove.XMovePosition = double.Parse(x);
-            control.positionToMove.YMovePosition = double.Parse(y);
-            control.Printer.ActivePrinter.SerialConnection.Write(CommandMethods.BuildAbsolutePositionCommand());
-            control.Printer.ActivePrinter.SerialConnection.Write(CommandMethods.BuildLinearMoveCommand(control.positionToMove, control.feedRate));
-            control.Printer.ActivePrinter.SerialConnection.Write(CommandMethods.BuildRelativePositionCommand());
+            ControlPanelService.PositionToMove.XMovePosition = double.Parse(x);
+            ControlPanelService.PositionToMove.YMovePosition = double.Parse(y);
+            ControlPanelService.Printer.ActivePrinter.SerialConnection.Write(CommandMethods.BuildAbsolutePositionCommand());
+            ControlPanelService.Printer.ActivePrinter.SerialConnection.Write(CommandMethods.BuildLinearMoveCommand(ControlPanelService.PositionToMove, ControlPanelService.FeedRate));
+            ControlPanelService.Printer.ActivePrinter.SerialConnection.Write(CommandMethods.BuildRelativePositionCommand());
         }
     }
 
     void IDisposable.Dispose()
     {
-        foreach (var port in printerManager.Printers.Values)
-        {
-            printerManager.InputReceived -= OnUpdate;
-        }
-        portManager.SelectedPrinterChanged -= OnSelectedPrinter;
+
+        PrinterManagerService.InputReceived -= OnUpdate;
+        PrinterManagerService.ActivePrinterChanged -= OnSelectedPrinter;
+
     }
 }
