--- a/WebUIBlazor/Pages/Print.razor
+++ b/WebUIBlazor/Pages/Print.razor
@@ -37,18 +37,25 @@
             @if (printerManager.ActivePrinter.SerialConnection != null && printerManager.ActivePrinter.CurrentPrintJob.IsPrinting)
             {
                 <MudButton Disabled="true" FullWidth="true" Variant="Variant.Text" Color="Color.Tertiary" @onclick="ConfirmStartAsync">Start</MudButton>
+
+                <!-- Button to pause printing -->
+                <MudButton FullWidth="true" Variant="Variant.Text" Color="Color.Tertiary" @onclick="() => PrintManager.PausePrint(printerManager.ActivePrinter)">Pause</MudButton>
+                <!-- Button to resume printing -->
+                <MudButton FullWidth="true" Variant="Variant.Text" Color="Color.Tertiary" @onclick="() => PrintManager.ResumePrint(printerManager.ActivePrinter)">Resume</MudButton>
+                <!-- Button to stop printing -->
+                <MudButton FullWidth="true" Variant="Variant.Text" Color="Color.Tertiary" @onclick="() => StopPrint()">Stop</MudButton>
             }
             else
             {
                 <MudButton FullWidth="true" Variant="Variant.Text" Color="Color.Tertiary" @onclick="ConfirmStartAsync">Start</MudButton>
 
+                <!-- Button to pause printing -->
+                <MudButton Disabled="true" FullWidth="true" Variant="Variant.Text" Color="Color.Tertiary" @onclick="() => PrintManager.PausePrint(printerManager.ActivePrinter)">Pause</MudButton>
+                <!-- Button to resume printing -->
+                <MudButton Disabled="true" FullWidth="true" Variant="Variant.Text" Color="Color.Tertiary" @onclick="() => PrintManager.ResumePrint(printerManager.ActivePrinter)">Resume</MudButton>
+                <!-- Button to stop printing -->
+                <MudButton Disabled="true" FullWidth="true" Variant="Variant.Text" Color="Color.Tertiary" @onclick="() => StopPrint()">Stop</MudButton>
             }
-            <!-- Button to pause printing -->
-            <MudButton FullWidth="true" Variant="Variant.Text" Color="Color.Tertiary" @onclick="PrintManager.PausePrint">Pause</MudButton>
-            <!-- Button to resume printing -->
-            <MudButton FullWidth="true" Variant="Variant.Text" Color="Color.Tertiary" @onclick="PrintManager.ResumePrint">Resume</MudButton>
-            <!-- Button to stop printing -->
-            <MudButton FullWidth="true" Variant="Variant.Text" Color="Color.Tertiary" @onclick="() => StopPrint()">Stop</MudButton>
         </ContainerSpaceBetween>
 
         <MudDivider Class="pt-5" />
@@ -72,21 +79,24 @@
 
             <!-- MudExpansionPanel for displaying uploaded files -->
             <MudItem xs="12" md="8" lg="8">
-                <MudExpansionPanel Text="Uploaded Files">
-                    @foreach (var file in PrintManager.UploadedFiles)
+                <MudExpansionPanel Disabled="@(printerManager.ActivePrinter.MediaAttached || PrintManager.DriveLetter == null)" Text="Uploaded Files">
+                    @if (printerManager.ActivePrinter.SerialConnection != null)
                     {
-                        <MudListItem>
-                            <div style="display: flex; justify-content: space-between; align-items: center;">
-                                <!-- Displaying file name -->
-                                <MudText Typo="Typo.subtitle2">@file.FileName</MudText>
-                                <!-- Displaying file size -->
-                                <MudText Typo="Typo.overline">@Math.Round(printerManager.ActivePrinter.CurrentPrintJob.ConvertToMB(@file.FileSize), 2)MB</MudText>
-                                <!-- Progress indicator -->
-                                <MudProgressCircular Color="Color.Default" Indeterminate=@PrintManager.IsTransferring />
-                                <!-- Button to start adding file to media -->
-                                <MudButton OnClick="() => PrintManager.WriteFileToPort(PrintManager.ChosenPort,file.FileName)">Add to media</MudButton>
-                            </div>
-                        </MudListItem>
+                        @foreach (var file in printerManager.ActivePrinter.PrintService.UploadedFiles)
+                        {
+                            <MudListItem>
+                                <div style="display: flex; justify-content: space-between; align-items: center;">
+                                    <!-- Displaying file name -->
+                                    <MudText Typo="Typo.subtitle2">@file.FileName</MudText>
+                                    <!-- Displaying file size -->
+                                    <MudText Typo="Typo.overline">@Math.Round(printerManager.ActivePrinter.CurrentPrintJob.ConvertToMB(@file.FileSize), 2)MB</MudText>
+                                    <!-- Progress indicator -->
+                                    <MudProgressCircular Color="Color.Default" Indeterminate=@printerManager.ActivePrinter.IsTransferringFile />
+                                    <!-- Button to start adding file to media -->
+                                    <MudButton Disabled="printerManager.ActivePrinter.IsTransferringFile" OnClick="() => PrintManager.WriteFileToDrive(PrintManager.DriveLetter, file.FileName, printerManager.ActivePrinter)">Add to media</MudButton>
+                                </div>
+                            </MudListItem>
+                        }
                     }
                 </MudExpansionPanel>
             </MudItem>
@@ -96,24 +106,24 @@
         <MudGrid Justify="Justify.SpaceAround">
             <MudItem xs="6" lg="6" Class="px-0">
                 <!-- Button to release media -->
-                <MudButton FullWidth="true" Variant="Variant.Text" Color="Color.Tertiary" OnClick="PrintManager.ReleaseMedia">Release Media</MudButton>
+                <MudButton FullWidth="true" Variant="Variant.Text" Color="Color.Tertiary" OnClick="() => PrintManager.ReleaseMedia(printerManager.ActivePrinter)">Release Media</MudButton>
             </MudItem>
             <MudItem xs="6" lg="6" Class="px-0">
                 <!-- Button to attach media -->
-                <MudButton FullWidth="true" Variant="Variant.Text" Color="Color.Tertiary" OnClick="PrintManager.AttachMedia">Attach Media</MudButton>
+                <MudButton FullWidth="true" Disabled="printerManager.ActivePrinter.IsTransferringFile" Variant="Variant.Text" Color="Color.Tertiary" OnClick="() => PrintManager.AttachMedia(printerManager.ActivePrinter)">Attach Media</MudButton>
             </MudItem>
         </MudGrid>
 
         <!-- Select dropdown for choosing media -->
-        @if (PrintManager.PortsAvailable != null)
+        @if (PrintManager.DriversAvailable != null)
         {
-            <MudSelect Label="Select Media" T="string" @bind-Value="PrintManager.ChosenPort" Variant="Variant.Outlined" AnchorOrigin="Origin.BottomCenter">
-                @foreach (var port in PrintManager.PortsAvailable)
+            <MudSelect Disabled="@(printerManager.ActivePrinter.IsTransferringFile || printerManager.ActivePrinter.MediaAttached)" Label="Select Media" T="string" @bind-Value="PrintManager.DriveLetter" Variant="Variant.Outlined" AnchorOrigin="Origin.BottomCenter">
+                @foreach (var port in PrintManager.DriversAvailable)
                 {
-                    <MudSelectItem Value="@port.DriveName">
+                    <MudSelectItem  Value="@port.DriveName">
                         <div style="display: flex; justify-content: space-between;">
                             <MudText> @port.DriveName @port.VolumeLabel </MudText>
-                            @if (PrintManager.ChosenPort == port.DriveName)
+                            @if (PrintManager.DriveLetter == port.DriveName)
                             {
                                 <MudIcon Icon="@Icons.Material.Filled.CheckCircle" Color="Color.Success" />
                             }
@@ -153,7 +163,7 @@
                 </ContainerSpaceBetween>
                 <ContainerSpaceBetween>
                     <MudText>Estimated print time left:</MudText>
-                    <MudText>@PrintManager.EstimatedTime</MudText>
+                    <MudText>@printerManager.ActivePrinter.CurrentPrintJob.EstimatePrintTime</MudText>
                 </ContainerSpaceBetween>
                 <ContainerSpaceBetween>
                     <MudText>Elapsed print time:</MudText>
@@ -178,6 +188,12 @@
                                 <b> @Math.Round((printerManager.ActivePrinter.CurrentPrintJob.CurrentBytes / 1024.0 / 1024.0), 2) MB / @Math.Round((printerManager.ActivePrinter.CurrentPrintJob.TotalBytes / 1024.0 / 1024.0), 2) MB</b>
                             </MudText>
                         </MudProgressLinear>
+                    </ContainerSpaceBetween>
+
+                    <ContainerSpaceBetween>
+                        <MudButton FullWidth="true" OnClick="() => PrintManager.CancelCurrentObject(printerManager.ActivePrinter)" Color="Color.Tertiary">
+                            Cancel Current Object
+                        </MudButton>
                     </ContainerSpaceBetween>
                 }
             </div>
@@ -330,7 +346,7 @@
 
                 <!-- Preheating Profiles -------------------------------------------------------------->
                 <MudCarousel Class="mud-width-full" Style="height:200px;" TData="object" AutoCycle="true" AutoCycleTime="TimeSpan.FromSeconds(5)" EnableSwipeGesture="true" Elevation="1">
-                    @foreach (var profile in PrinterDataHandler.preheatingProfiles)
+                    @foreach (var profile in PrinterDataHandler.PreheatingProfiles)
                     {
                         <!-- MudCarouselItem to display a preheating profile -->
                         <MudCarouselItem Transition="MudBlazor.Transition.Slide" Color="@Color.Surface">
@@ -355,7 +371,7 @@
                                                Size="Size.Medium"
                                                Variant="Variant.Text"
                                                Color="Color.Warning"
-                                               OnClick="() => PrinterDataHandler.StartPreheating(profile)" />
+                                               OnClick="() => PrinterDataHandler.StartPreheating(profile, printerManager.ActivePrinter)" />
                                 <!-- Button to delete preheating profile -->
                                 <MudIconButton Icon="@Icons.Material.Filled.Delete" Variant="Variant.Text" Color="Color.Error" OnClick="() => PrinterDataHandler.DeletePreheatingProfile(profile)" />
                             </div>
@@ -369,7 +385,7 @@
     <!-- Bed Leveling ---------------------------------------------------------------->
     @if (printerManager.ActivePrinter.HasAutoBedLevel)
     {
-        <BedLevel/>
+        <BedLevel />
     }
 
     <!-- Temperature Graph ----------------------------------------------------------->
@@ -397,25 +413,27 @@
     /// Method that is called when the component is initialized.
     /// Sets up event handlers, initializes configuration, layout, and loads printer data.
     /// </summary>
-    protected async override Task OnInitializedAsync()
+    protected override void OnInitialized()
     {
-        // Subscribe to the background service events
+        // Subscribe to service events
         background.SecondElapsed += OnSecondElapsed;
         printerManager.ActivePrinterChanged += OnSelectedPrinter;
+        printerManager.InputReceived += OnUpdate;
+    }
 
-        await Task.Run(() =>
+    protected override void OnAfterRender(bool firstRender)
+    {
+        if (firstRender)
         {
-
             if (printerManager.ActivePrinter.SerialConnection != null && printerManager.ActivePrinter.SerialConnection.IsConnected)
             {
                 printerManager.ActivePrinter.SerialConnection.Write(CommandMethods.BuildListSDCardCommand());
-
-                printerManager.InputReceived += OnUpdate;
+                PrinterDataHandler.RequestFirmwareSettings(printerManager.ActivePrinter);
             }
 
             // Load preheating profiles from the specified path
-            PrinterDataHandler.preheatingProfiles = PrinterDataHandler.LoadPrinterDataList<MachineControlHub.Material.PreheatingProfiles>(Data.PrinterDataService.PREHEATING_PROFILES_PATH);
-        });
+            PrinterDataHandler.PreheatingProfiles = PrinterDataHandler.LoadPrinterDataList<MachineControlHub.Material.PreheatingProfiles>(Data.PrinterDataService.PREHEATING_PROFILES_PATH);
+        }
     }
 
     /// <summary>
@@ -427,10 +445,12 @@
     {
         try
         {
-            if(PrintManager.SDFiles != null)
+            if (PrintManager.SDFiles != null)
             {
                 PrintManager.SDFiles.Clear();
             }
+            printerManager.ActivePrinter.SerialConnection.Write("M420 V");
+
             await InvokeAsync(() => MyNavigationManager.NavigateTo(MyNavigationManager.Uri, true));
         }
         catch (NavigationException navEx)
@@ -456,11 +476,11 @@
             if (message.Contains("End"))
             {
                 SDFiles = string.Join("\n", FileMessage.Split('\n').Where(line => !string.IsNullOrWhiteSpace(line)));
-                PrintManager.ListSDFiles(SDFiles);
+                PrintManager.ListSDFiles(SDFiles, printerManager.ActivePrinter);
                 FileMessage = "";
             }
 
-            PrintManager.GetPrintingFileName(message);
+            PrintManager.GetPrintingFileName(message, printerManager.ActivePrinter);
 
             // parse the current hotend and bed temperatures
             await HotendTemperatureService.ParseCurrentHotendTemperature(message);
@@ -479,6 +499,7 @@
 
             // Update the graph data with the latest values
             PrintManager.UpdateGraphData();
+            PrinterDataHandler.OnUpdateSettings(message, printerManager.ActivePrinter);
 
             await PromptHandler(message);
             await InvokeAsync(StateHasChanged);
@@ -508,7 +529,7 @@
                     // If printing is in progress, request print time elapsed
                     if (printerManager.ActivePrinter.CurrentPrintJob.IsPrinting)
                     {
-                        await PrintManager.DisplayEstimatedTimeRemaining();
+                        // await printerManager.ActivePrinter.CurrentPrintJob.EstimateTimeRemainingAsync();
                         printerManager.ActivePrinter.SerialConnection.Write("M27 C");
                     }
 
@@ -535,7 +556,7 @@
         var fileSize = e.File.Size;
 
         // Add the file's information to the list of uploaded files
-        PrintManager.UploadedFiles.Add((fileName, PrintManager.File, fileSize));
+        printerManager.ActivePrinter.PrintService.UploadedFiles.Add((fileName, PrintManager.File, fileSize));
 
         StateHasChanged();
     }
@@ -557,11 +578,11 @@
                 }
                 else
                 {
-                    PrintManager.StartPrint(PrintManager.FileToPrint);
-                    PrintManager.StartTimeOfPrint();
-                    PrintManager.Background.ResetStopwatch();
-                    PrintManager.Background.StartStopwatch();
-                    PrintManager.GetFileNameAndSize(PrintManager.FileToPrint);
+                    PrintManager.StartPrint(PrintManager.FileToPrint, printerManager.ActivePrinter);
+                    PrintManager.StartTimeOfPrint(printerManager.ActivePrinter);
+                    printerManager.ActivePrinter.CurrentPrintJob.ResetStopwatch();
+                    printerManager.ActivePrinter.CurrentPrintJob.StartStopwatch();
+                    PrintManager.GetFileNameAndSize(PrintManager.FileToPrint, printerManager.ActivePrinter);
                     PrintManager.FinalizationExecuted = false; // Reset the flag
                     Snackbar.Add($"<ul><li>Print Started</li> <li> File Printing: {PrintManager.FileToPrint} </li></ul>", Severity.Success);
                 }
@@ -586,11 +607,11 @@
             if (result == true && printerManager.ActivePrinter.CurrentPrintJob.IsPrinting)
             {
                 printerManager.ActivePrinter.PrintService.AbortCurrentPrint();
-                PrintManager.Background.StopStopwatch();
+                printerManager.ActivePrinter.CurrentPrintJob.StopStopwatch();
                 PrintManager.Progress = 0;
-                PrintManager.FormatTotalPrintTime();
+                PrintManager.FormatTotalPrintTime(printerManager.ActivePrinter);
                 printerManager.ActivePrinter.CurrentPrintJob.IsPrinting = false;
-                PrintManager.PrinterDataServiceTest.AddPrintJobToHistory(printerManager.ActivePrinter.CurrentPrintJob,printerManager);
+                PrinterDataHandler.AddPrintJobToHistory(printerManager.ActivePrinter);
 
                 Snackbar.Add("Print Stopped", Severity.Error);
             }
