--- a/WebUIBlazor/Pages/PrinterState.razor
+++ b/WebUIBlazor/Pages/PrinterState.razor
@@ -6,10 +6,10 @@
 
 @if (printerManager.ActivePrinter.SerialConnection != null && printerManager.ActivePrinter.CurrentPrintJob.IsPrinting)
 {
-    
-    <MudProgressLinear Color="Color.Warning" Striped="true" Size="Size.Large" Value="printingService.Progress" Class="pb-9">
+
+    <MudProgressLinear Color="Color.Warning" Striped="true" Size="Size.Large" Value="printerManager.ActivePrinter.CurrentPrintJob.PrintProgress" Class="pb-9">
         <MudText Typo="Typo.subtitle1" Color="Color.Surface">
-            <b>Printing: @printingService.Progress %</b>
+            <b>Printing: @printerManager.ActivePrinter.CurrentPrintJob.PrintProgress %</b>
         </MudText>
     </MudProgressLinear>
 }
@@ -17,20 +17,6 @@
 <MudAlert ContentAlignment="HorizontalAlignment.Center" NoIcon="true" Severity="Severity.Success">
     <MudText Typo="Typo.h6" Color="Color.Primary">@printerManager.Notification</MudText>
 </MudAlert>
-@*
-    <MudAlert ContentAlignment="HorizontalAlignment.Center" Severity="@(!PortManager.IsBusy ? Severity.Success : Severity.Warning)" Variant="Variant.Text">
-        @if (PortManager.IsBusy)
-        {
-            <MudProgressLinear Striped="true" Color="Color.Primary" Indeterminate="true" Size="Size.Small" />
-        }
-        @(new MarkupString(!PortManager.IsBusy ? $"Printer is ready" : "Printer Busy... Please wait"))
-    </MudAlert> *@
-
-@*     <MudProgressLinear Color="Color.Warning" Striped="true" Size="Size.Large" Value="printingService.progress" Class="pb-9">
-        <MudText Typo="Typo.subtitle1" Color="Color.Surface">
-            <b>Printing: @printingService.progress %</b>
-        </MudText>
-    </MudProgressLinear> *@
 
 @code {
 
@@ -48,7 +34,7 @@
 
     public void OnPrinterChanged(object sender, EventArgs e)
     {
-        printingService.Progress = 0;
+        printerManager.ActivePrinter.CurrentPrintJob.PrintProgress = 0;
     }
 
 
