--- a/WebUIBlazor/Pages/Print.razor
+++ b/WebUIBlazor/Pages/Print.razor
@@ -110,7 +110,7 @@
             </MudItem>
             <MudItem xs="6" lg="6" Class="px-0">
                 <!-- Button to attach media -->
-                <MudButton FullWidth="true" Disabled="printerManager.ActivePrinter.IsTransferringFile" Variant="Variant.Text" Color="Color.Tertiary" OnClick="() => PrintManager.AttachMedia(printerManager.ActivePrinter)">Attach Media</MudButton>
+                <MudButton FullWidth="true" Disabled="printerManager.ActivePrinter.IsTransferringFile || printerManager.ActivePrinter.MediaAttached" Variant="Variant.Text" Color="Color.Tertiary" OnClick="() => {PrintManager.AttachMedia(printerManager.ActivePrinter); RefreshAfterAttachingMedia();}">Attach Media</MudButton>
             </MudItem>
         </MudGrid>
 
@@ -135,7 +135,7 @@
 
         @if (printerManager.ActivePrinter.SerialConnection != null && printerManager.ActivePrinter.SerialConnection.IsConnected)
         {
-            <MudSelect @bind-Value="@PrintManager.FileToPrint" T="string" Label="SD Files" Variant="Variant.Outlined" AnchorOrigin="Origin.BottomCenter">
+            <MudSelect @bind-Value="@PrintManager.FileToPrint" T="string" Label="Printer Files" Variant="Variant.Outlined" AnchorOrigin="Origin.BottomCenter">
 
                 @if (PrintManager.SDFiles != null)
                 {
@@ -153,51 +153,48 @@
         }
 
 
-        @if (printerManager.ActivePrinter.SerialConnection != null && printerManager.ActivePrinter.SerialConnection.IsConnected)
-        {
-            <!-- Displaying print details -->
-            <div>
-                <ContainerSpaceBetween Class="pt-8">
-                    <MudText>File printing:</MudText>
-                    <MudText><strong>@printerManager.ActivePrinter.CurrentPrintJob.FileName</strong></MudText>
-                </ContainerSpaceBetween>
+        <!-- Displaying print details -->
+        <div>
+            <ContainerSpaceBetween Class="pt-8">
+                <MudText>File printing:</MudText>
+                <MudText><strong>@printerManager.ActivePrinter.CurrentPrintJob.FileName</strong></MudText>
+            </ContainerSpaceBetween>
+            <ContainerSpaceBetween>
+                <MudText>Estimated print time left:</MudText>
+                <MudText>@printerManager.ActivePrinter.CurrentPrintJob.EstimatePrintTime</MudText>
+            </ContainerSpaceBetween>
+            <ContainerSpaceBetween>
+                <MudText>Elapsed print time:</MudText>
+                <MudText>
+                    @printerManager.ActivePrinter.CurrentPrintJob.stopwatch.Elapsed.ToString("hh\\:mm\\:ss")
+                </MudText>
+            </ContainerSpaceBetween>
+            <ContainerSpaceBetween>
+                <MudText>Start time:</MudText>
+                <MudText><strong>@printerManager.ActivePrinter.CurrentPrintJob.FormattedStartTime</strong></MudText>
+            </ContainerSpaceBetween>
+
+            <ContainerSpaceBetween>
+                <MudText>File Size:</MudText>
+                <MudText><strong>@Math.Round(printerManager.ActivePrinter.CurrentPrintJob.ConvertToMB(printerManager.ActivePrinter.CurrentPrintJob.FileSize), 2)MB</strong></MudText>
+            </ContainerSpaceBetween>
+            @if (printerManager.ActivePrinter.CurrentPrintJob.IsPrinting)
+            {
                 <ContainerSpaceBetween>
-                    <MudText>Estimated print time left:</MudText>
-                    <MudText>@printerManager.ActivePrinter.CurrentPrintJob.EstimatePrintTime</MudText>
-                </ContainerSpaceBetween>
-                <ContainerSpaceBetween>
-                    <MudText>Elapsed print time:</MudText>
-                    <MudText>
-                        @printerManager.ActivePrinter.CurrentPrintJob.stopwatch.Elapsed.ToString("hh\\:mm\\:ss")
-                    </MudText>
-                </ContainerSpaceBetween>
-                <ContainerSpaceBetween>
-                    <MudText>Start time:</MudText>
-                    <MudText><strong>@printerManager.ActivePrinter.CurrentPrintJob.FormattedStartTime</strong></MudText>
+                    <MudProgressLinear Color="Color.Warning" Striped="true" Size="Size.Large" Value="printerManager.ActivePrinter.CurrentPrintJob.PrintProgress" Class="pb-9">
+                        <MudText Typo="Typo.subtitle1" Color="Color.Surface">
+                            <b> @Math.Round((printerManager.ActivePrinter.CurrentPrintJob.CurrentBytes / 1024.0 / 1024.0), 2) MB / @Math.Round((printerManager.ActivePrinter.CurrentPrintJob.TotalBytes / 1024.0 / 1024.0), 2) MB</b>
+                        </MudText>
+                    </MudProgressLinear>
                 </ContainerSpaceBetween>
 
                 <ContainerSpaceBetween>
-                    <MudText>File Size:</MudText>
-                    <MudText><strong>@Math.Round(printerManager.ActivePrinter.CurrentPrintJob.ConvertToMB(printerManager.ActivePrinter.CurrentPrintJob.FileSize), 2)MB</strong></MudText>
+                    <MudButton FullWidth="true" OnClick="() => PrintManager.CancelCurrentObject(printerManager.ActivePrinter)" Color="Color.Tertiary">
+                        Cancel Current Object
+                    </MudButton>
                 </ContainerSpaceBetween>
-                @if (printerManager.ActivePrinter.CurrentPrintJob.IsPrinting)
-                {
-                    <ContainerSpaceBetween>
-                        <MudProgressLinear Color="Color.Warning" Striped="true" Size="Size.Large" Value="printerManager.ActivePrinter.CurrentPrintJob.PrintProgress" Class="pb-9">
-                            <MudText Typo="Typo.subtitle1" Color="Color.Surface">
-                                <b> @Math.Round((printerManager.ActivePrinter.CurrentPrintJob.CurrentBytes / 1024.0 / 1024.0), 2) MB / @Math.Round((printerManager.ActivePrinter.CurrentPrintJob.TotalBytes / 1024.0 / 1024.0), 2) MB</b>
-                            </MudText>
-                        </MudProgressLinear>
-                    </ContainerSpaceBetween>
-
-                    <ContainerSpaceBetween>
-                        <MudButton FullWidth="true" OnClick="() => PrintManager.CancelCurrentObject(printerManager.ActivePrinter)" Color="Color.Tertiary">
-                            Cancel Current Object
-                        </MudButton>
-                    </ContainerSpaceBetween>
-                }
-            </div>
-        }
+            }
+        </div>
     </MudItem>
 
     <!-- Temperatures ---------------------------------------------------------------->
@@ -237,9 +234,9 @@
                             <MudItem xs="12" sm="6" md="12" Class="my-0 py-0">
                                 <ContainerSpaceBetween Class="ma-0 pa-0">
                                     <!-- Button to set hotend temperature -->
-                                    <MudButton FullWidth="true" Size="Size.Small" Variant="Variant.Text" Color="Color.Tertiary" @onclick="() => HotendTemperatureService.SetHotendTemperature(HotendTemperatureService.SetHotendTemp)">Set Temperature</MudButton>
+                                    <MudButton FullWidth="true" Size="Size.Small" Variant="Variant.Text" Color="Color.Tertiary" @onclick="() => HotendTemperatureService.SetHotendTemperature(HotendTemperatureService.SetHotendTemp, printerManager.ActivePrinter)">Set Temperature</MudButton>
                                     <!-- Button to turn off hotend temperature -->
-                                    <MudButton FullWidth="true" Size="Size.Small" Variant="Variant.Text" Color="Color.Error" @onclick="() => HotendTemperatureService.SetHotendTemperature(0)">Turn Off</MudButton>
+                                    <MudButton FullWidth="true" Size="Size.Small" Variant="Variant.Text" Color="Color.Error" @onclick="() => HotendTemperatureService.SetHotendTemperature(0, printerManager.ActivePrinter)">Turn Off</MudButton>
                                 </ContainerSpaceBetween>
                             </MudItem>
                         </MudGrid>
@@ -253,34 +250,34 @@
                         <ContainerSpaceBetween Class="pt-0 mt-0">
                             <MudText>Current Bed Temperature:</MudText>
                             <MudText Style="display:flex; align-items:center;">
-                                @if (BedTemperatureService.currentBedTemperature < BedTemperatureService.targetBedTemperature)
+                                @if (BedTemperatureService.CurrentBedTemp < BedTemperatureService.TargetBedTemp)
                                 {
                                     <MudIcon Icon="@Icons.Material.Filled.LocalFireDepartment"
                                              Size="Size.Large"
                                              Color="@(IsPrimaryColor ? Color.Warning : Color.Default)"
                                              Class="pr-2 mr-2" />
                                 }
-                                @BedTemperatureService.currentBedTemperature
+                                @BedTemperatureService.CurrentBedTemp
                             </MudText>
                         </ContainerSpaceBetween>
                         <!-- Container with text for target bed temperature -->
                         <ContainerSpaceBetween Class="pt-2 mt-2">
                             <MudText>Target Bed Temperature:</MudText>
-                            <MudText>@BedTemperatureService.targetBedTemperature</MudText>
+                            <MudText>@BedTemperatureService.TargetBedTemp</MudText>
                         </ContainerSpaceBetween>
                     </MudItem>
                     <MudItem xs="12" sm="12" md="6">
                         <MudGrid Style="align-items: center;">
                             <MudItem xs="12" sm="6" md="12">
                                 <!-- MudNumericField for setting bed temperature -->
-                                <MudNumericField @bind-Value="BedTemperatureService.setBedTemperature" Label="Set Bed Temperature" Variant="Variant.Text" Min="0" HideSpinButtons="true" />
+                                <MudNumericField @bind-Value="BedTemperatureService.SetBedTemp" Label="Set Bed Temperature" Variant="Variant.Text" Min="0" HideSpinButtons="true" />
                             </MudItem>
                             <MudItem xs="12" sm="6" md="12" Class="my-0 py-0">
                                 <ContainerSpaceBetween Class="ma-0 pa-0">
                                     <!-- Button to set bed temperature -->
-                                    <MudButton FullWidth="true" Size="Size.Small" Variant="Variant.Text" Color="Color.Tertiary" @onclick="() => BedTemperatureService.SetBedTemperature(BedTemperatureService.setBedTemperature)">Set Temperature</MudButton>
+                                    <MudButton FullWidth="true" Size="Size.Small" Variant="Variant.Text" Color="Color.Tertiary" @onclick="() => BedTemperatureService.SetBedTemperature(BedTemperatureService.SetBedTemp, printerManager.ActivePrinter)">Set Temperature</MudButton>
                                     <!-- Button to turn off bed temperature -->
-                                    <MudButton FullWidth="true" Size="Size.Small" Variant="Variant.Text" Color="Color.Error" @onclick="() => BedTemperatureService.SetBedTemperature(0)">Turn Off</MudButton>
+                                    <MudButton FullWidth="true" Size="Size.Small" Variant="Variant.Text" Color="Color.Error" @onclick="() => BedTemperatureService.SetBedTemperature(0, printerManager.ActivePrinter)">Turn Off</MudButton>
                                 </ContainerSpaceBetween>
                             </MudItem>
                         </MudGrid>
@@ -294,34 +291,34 @@
                         <ContainerSpaceBetween Class="pt-0 mt-0">
                             <MudText>Current Chamber Temperature:</MudText>
                             <MudText Style="display:flex; align-items:center;">
-                                @if (ChamberTemperatureService.currentChamberTemperature < ChamberTemperatureService.targetChamberTemperature)
+                                @if (ChamberTemperatureService.CurrentChamberTemp < ChamberTemperatureService.TargetChamberTemp)
                                 {
                                     <MudIcon Icon="@Icons.Material.Filled.LocalFireDepartment"
                                              Size="Size.Large"
                                              Color="@(IsPrimaryColor ? Color.Warning : Color.Default)"
                                              Class="pr-2 mr-2" />
                                 }
-                                @ChamberTemperatureService.currentChamberTemperature
+                                @ChamberTemperatureService.CurrentChamberTemp
                             </MudText>
                         </ContainerSpaceBetween>
                         <!-- Container with text for target chamber temperature -->
                         <ContainerSpaceBetween Class="pt-2 mt-2">
                             <MudText>Target Chamber Temperature:</MudText>
-                            <MudText>@ChamberTemperatureService.targetChamberTemperature</MudText>
+                            <MudText>@ChamberTemperatureService.TargetChamberTemp</MudText>
                         </ContainerSpaceBetween>
                     </MudItem>
                     <MudItem xs="12" sm="12" md="6">
                         <MudGrid Style="align-items: center;">
                             <MudItem xs="12" sm="6" md="12">
                                 <!-- MudNumericField for setting chamber temperature -->
-                                <MudNumericField @bind-Value="ChamberTemperatureService.setChamberTemperature" Label="Set Chamber Temperature" Variant="Variant.Text" Min="0" HideSpinButtons="true" />
+                                <MudNumericField @bind-Value="ChamberTemperatureService.SetChamberTemp" Label="Set Chamber Temperature" Variant="Variant.Text" Min="0" HideSpinButtons="true" />
                             </MudItem>
                             <MudItem xs="12" sm="6" md="12" Class="my-0 py-0">
                                 <ContainerSpaceBetween Class="ma-0 pa-0">
                                     <!-- Button to set chamber temperature -->
-                                    <MudButton FullWidth="true" Size="Size.Small" Variant="Variant.Text" Color="Color.Tertiary" @onclick="() => ChamberTemperatureService.SetChamberTemperature(ChamberTemperatureService.setChamberTemperature)">Set Temperature</MudButton>
+                                    <MudButton FullWidth="true" Size="Size.Small" Variant="Variant.Text" Color="Color.Tertiary" @onclick="() => ChamberTemperatureService.SetChamberTemperature(ChamberTemperatureService.SetChamberTemp, printerManager.ActivePrinter)">Set Temperature</MudButton>
                                     <!-- Button to turn off chamber temperature -->
-                                    <MudButton FullWidth="true" Size="Size.Small" Variant="Variant.Text" Color="Color.Error" @onclick="() => ChamberTemperatureService.SetChamberTemperature(0)">Turn Off</MudButton>
+                                    <MudButton FullWidth="true" Size="Size.Small" Variant="Variant.Text" Color="Color.Error" @onclick="() => ChamberTemperatureService.SetChamberTemperature(0, printerManager.ActivePrinter)">Turn Off</MudButton>
                                 </ContainerSpaceBetween>
                             </MudItem>
                         </MudGrid>
@@ -332,15 +329,15 @@
                 <MudGrid>
                     <!-- Button to change filament -->
                     <MudItem Class="mr-0 pr-0" xs="12" sm="4" md="4" lg="4">
-                        <MudButton FullWidth="true" Variant="Variant.Text" Color="Color.Tertiary" @onclick="() => HotendTemperatureService.ChangeFilament()">Change Filament</MudButton>
+                        <MudButton FullWidth="true" Variant="Variant.Text" Color="Color.Tertiary" @onclick="() => HotendTemperatureService.ChangeFilament(printerManager.ActivePrinter)">Change Filament</MudButton>
                     </MudItem>
                     <!-- Button to load filament -->
                     <MudItem Class="mx-0 px-0" xs="12" sm="4" md="4" lg="4">
-                        <MudButton FullWidth="true" Variant="Variant.Text" Color="Color.Tertiary" @onclick="() => HotendTemperatureService.LoadFilament()">Load Filament</MudButton>
+                        <MudButton FullWidth="true" Variant="Variant.Text" Color="Color.Tertiary" @onclick="() => HotendTemperatureService.LoadFilament(printerManager.ActivePrinter)">Load Filament</MudButton>
                     </MudItem>
                     <!-- Button to unload filament -->
                     <MudItem Class="ml-0 pl-0" xs="12" sm="4" md="4" lg="4">
-                        <MudButton FullWidth="true" Variant="Variant.Text" Color="Color.Tertiary" @onclick="() => HotendTemperatureService.UnloadFilament()">Unload Filament</MudButton>
+                        <MudButton FullWidth="true" Variant="Variant.Text" Color="Color.Tertiary" @onclick="() => HotendTemperatureService.UnloadFilament(printerManager.ActivePrinter)">Unload Filament</MudButton>
                     </MudItem>
                 </MudGrid>
 
@@ -437,6 +434,7 @@
             {
                 // Request the list of files on the SD card
                 printerManager.ActivePrinter.SerialConnection.Write(CommandMethods.BuildListSDCardCommand());
+                printerManager.ActivePrinter.SerialConnection.Write("M304");
 
                 PrinterDataHandler.RequestFirmwareSettings(printerManager.ActivePrinter);
             }
@@ -476,6 +474,11 @@
         }
     }
 
+    private async void RefreshAfterAttachingMedia()
+    {
+        await InvokeAsync(() => MyNavigationManager.NavigateTo(MyNavigationManager.Uri, true));
+    }
+
     /// <summary>
     /// Handles updates from the printer.
     /// </summary>
@@ -504,9 +507,13 @@
             // get the name of the file being printed
             PrintManager.GetPrintingFileName(input, printerManager.ActivePrinter);
 
-            // parse the current hotend and bed temperatures
-            await HotendTemperatureService.ParseCurrentHotendTemperature(input);
-            await BedTemperatureService.ParseCurrentBedTemperature(input);
+            // parse the current hotend, bed and chamber temperatures
+            await HotendTemperatureService.ParseCurrentHotendTemperature(input, printerManager.ActivePrinter);
+            await BedTemperatureService.ParseCurrentBedTemperature(input, printerManager.ActivePrinter);
+            if (printerManager.ActivePrinter.HasChamber)
+            {
+                await ChamberTemperatureService.ParseCurrentChamberTemperature(input, printerManager.ActivePrinter);
+            }
 
             // Ensure the graph data does not exceed 30 entries by removing the oldest entries
             if (PrintingService.HotendGraph.Count >= 30)
@@ -517,7 +524,7 @@
 
             // Add the current temperature data to the graph
             PrintingService.HotendGraph.Add(HotendTemperatureService.CurrentHotendTemp);
-            PrintingService.BedGraph.Add(BedTemperatureService.currentBedTemperature);
+            PrintingService.BedGraph.Add(BedTemperatureService.CurrentBedTemp);
 
             // Update the graph data with the latest values
             PrintManager.UpdateGraphData();
