--- a/WebUIBlazor/Pages/PrintHistory.razor
+++ b/WebUIBlazor/Pages/PrintHistory.razor
@@ -7,6 +7,10 @@
 @inject PrinterManagerService PrinterManager
 @inject NavigationManager MyNavigationManager
 
+<PrinterState />
+
+<PromptAndNotificationsHandler />
+
 <MudGrid Class="mt-9" Style="width: 100vw;">
     <MudItem xl="6">
         <div style="text-align:center;">
