--- a/WebUIBlazor/Pages/PrinterSettings.razor
+++ b/WebUIBlazor/Pages/PrinterSettings.razor
@@ -9,6 +9,7 @@
 @inject BedTemperatureService BedTemperature
 
 <PrinterState />
+<PromptAndNotificationsHandler />
 
 <MudPaper Class="my-0 pt-5" Elevation="0" Height="95vh" Width="100vw">
     <div style="display: flex; justify-content:center; padding-top:10px; padding-bottom: 10px; padding-left: 20px;">
