Changed more names, added more comments
fixed bugs in printservice.cs and added more methods

--- a/WebUIBlazor/Pages/BedLevel.razor
+++ b/WebUIBlazor/Pages/BedLevel.razor
@@ -15,8 +15,10 @@
 @using Plotly.Blazor;
 @using Plotly.Blazor.Traces;
 @using System.Text.Json;
+
+
 <!-- Bed Leveling ---------------------------------------------------------------->
-<MudItem xs="12" md="6" Class="pa-0">
+<MudItem xs="12" md="6" lg="6" Class="pa-0">
     <!-- Main grid container for the plotly chart and button -->
     <MudGrid Class="pl-6">
         <!-- Grid item containing the Plotly chart -->
