--- a/WebUIBlazor/Pages/Connection.razor
+++ b/WebUIBlazor/Pages/Connection.razor
@@ -5,7 +5,7 @@
 
 <MudContainer Style="display: flex; justify-content: center; align-items: center;" Class="pt-3">
     <MudStack Spacing="2">
-        <MudFab Size="Size.Small" StartIcon="@Icons.Material.Filled.PrivateConnectivity" Color="Color.Tertiary" OnClick="OnExpandCollapseClick"></MudFab>
+        <MudFab Size="Size.Small" StartIcon="@Icons.Material.Filled.ElectricalServices" Color="Color.Tertiary" OnClick="OnExpandCollapseClick"></MudFab>
         <MudCollapse Expanded="_expanded">
             <MudPaper >
                 <div style="display: flex; gap: 16px; padding: 0px 56px;">
